; ModuleID = '/home/carl/AnghaBench/radare2/libr/flag/extr_flag.c_new_spaces.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/flag/extr_flag.c_new_spaces.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i32 }

@.str = private unnamed_addr constant [3 x i8] c"fs\00", align 1
@R_SPACE_EVENT_COUNT = common dso_local global i32 0, align 4
@count_flags_in_space = common dso_local global i32 0, align 4
@R_SPACE_EVENT_UNSET = common dso_local global i32 0, align 4
@unset_flagspace = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_4__*)* @new_spaces to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @new_spaces(%struct.TYPE_4__* %0) #0 {
  %2 = alloca %struct.TYPE_4__*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %2, align 8
  %3 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %4 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %3, i32 0, i32 0
  %5 = call i32 @r_spaces_init(%struct.TYPE_5__* %4, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0))
  %6 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %7 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %6, i32 0, i32 0
  %8 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load i32, i32* @R_SPACE_EVENT_COUNT, align 4
  %11 = load i32, i32* @count_flags_in_space, align 4
  %12 = call i32 @r_event_hook(i32 %9, i32 %10, i32 %11, i32* null)
  %13 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = load i32, i32* @R_SPACE_EVENT_UNSET, align 4
  %18 = load i32, i32* @unset_flagspace, align 4
  %19 = call i32 @r_event_hook(i32 %16, i32 %17, i32 %18, i32* null)
  ret void
}

declare dso_local i32 @r_spaces_init(%struct.TYPE_5__*, i8*) #1

declare dso_local i32 @r_event_hook(i32, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
